external-crates/move/crates/move-compiler/tests/move_2024/matching/guard_backtrack_5.exp
error[E13003]: feature is under active development
  ┌─ tests/move_2024/matching/guard_backtrack_5.move:3:17
  │
3 │     public enum Pair<T> has drop {
  │                 ^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

